tdf#108722 vcl: fix bugs in TextEngine with TEXTATTR_PROTECTED

1. If the cursor is at the end of the paragraph, attributes ending
   at that position are skipped in TextEngine::FindCharAttrib().
2. If a TEXTATTR_PROTECTED is found, TextView::KeyInput()
   retains the selection that was extended to cover the attribute
   after deleting the text, because it compares to the initial
   selection.

Why delete/backspace keys only work with the "gtk" vcl-plug
but not "gtk3", "gen" or "kde4" is a mystery to me.

Change-Id: Id7a6f298332f5a99454c793dd2dd6d424a975ad4
(cherry picked from commit d918a8086af56d1869e465baae64d960e56066d1)